--- a/vitam-conf-dev/conf/logbook/traceabilityAudit.conf
+++ b/vitam-conf-dev/conf/logbook/traceabilityAudit.conf
@@ -1,3 +1,5 @@
 tenants:  [ "0", "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
-nbDay: 1
-timesEachDay: 24
+operationTraceabilityMaxRenewalDelay: 12
+operationTraceabilityMaxRenewalDelayUnit: HOURS
+lifecycleTraceabilityMaxRenewalDelay: 12
+lifecycleTraceabilityMaxRenewalDelayUnit: HOURS
