--- a/sources/metadata/metadata-core/pom.xml
+++ b/sources/metadata/metadata-core/pom.xml
@@ -45,6 +45,10 @@
 			<artifactId>diffutils</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.github.wnameless.json</groupId>
+			<artifactId>json-flattener</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
