--- a/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
+++ b/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
@@ -15,6 +15,7 @@ permissionsWithoutPersonalCertificate:
   - 'logbookoperations:id:read'
   - 'logbookunitlifecycles:id:read'
   - 'units:update'
+  - 'units:update:revert'
   - 'units:rules:update'
   - 'units:read'
   - 'units:id:read:json'
