--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -209,6 +209,7 @@
         <commons-csv.version>1.7</commons-csv.version>
         <bouncycastle.version>1.64</bouncycastle.version>
         <diffutils.version>1.3.0</diffutils.version>
+        <json-flattener.version>0.11.1</json-flattener.version>
         <jaxb2.version>1.0.2</jaxb2.version>
         <jaxb.version>2.3.2</jaxb.version>
         <httpclient.version>4.5.12</httpclient.version>
@@ -1270,6 +1271,11 @@
                 <groupId>com.googlecode.java-diff-utils</groupId>
                 <artifactId>diffutils</artifactId>
                 <version>${diffutils.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.wnameless.json</groupId>
+                <artifactId>json-flattener</artifactId>
+                <version>${json-flattener.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
