--- a/vitam-conf-dev/conf/storage/storage.conf
+++ b/vitam-conf-dev/conf/storage/storage.conf
@@ -12,6 +12,7 @@ offerSyncThreadPoolSize: 32
 offerSyncNumberOfRetries: 3
 offerSyncFirstAttemptWaitingTime: 15
 offerSyncWaitingTime: 30
+storageLogBackupThreadPoolSize: 16
 
 #Basic Authentication
 adminBasicAuth:
