Item #7269 : Add Bulk Atomic Updates Regression Tests

--- a/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
+++ b/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
@@ -17,6 +17,7 @@ permissionsWithoutPersonalCertificate:
   - 'units:update'
   - 'units:update:revert'
   - 'units:rules:update'
+  - 'units:bulk:update'
   - 'units:read'
   - 'units:id:read:json'
   - 'units:id:update'
