--- a/vitam-conf-dev/conf/storage/storage.conf
+++ b/vitam-conf-dev/conf/storage/storage.conf
@@ -13,6 +13,7 @@ offerSyncNumberOfRetries: 3
 offerSyncFirstAttemptWaitingTime: 15
 offerSyncWaitingTime: 30
 storageLogBackupThreadPoolSize: 16
+storageLogTraceabilityThreadPoolSize: 16
 
 #Basic Authentication
 adminBasicAuth:
