Item 6911 : Limit parallel AccessionRegisterSymbolic creation threads

--- a/sources/functional-administration/functional-administration-common/src/test/resources/functional_administration_test_config_defaults_only.yml
+++ b/sources/functional-administration/functional-administration-common/src/test/resources/functional_administration_test_config_defaults_only.yml
@@ -3,3 +3,5 @@ elasticsearchTenantIndexation:
   default_config:
     number_of_shards: 3
     number_of_replicas: 10
+
+accessionRegisterSymbolicThreadPoolSize: 4
