--- a/sources/functional-administration/functional-administration-common/src/test/resources/functional_administration_test_config_invalid_collection_name.yml
+++ b/sources/functional-administration/functional-administration-common/src/test/resources/functional_administration_test_config_invalid_collection_name.yml
@@ -7,3 +7,5 @@ elasticsearchTenantIndexation:
   unkown:
     number_of_shards: 2
     number_of_replicas: 3
+
+accessionRegisterSymbolicThreadPoolSize: 4
