--- a/sources/functional-administration/functional-administration-common/src/test/resources/functional_administration_test_config_invalid_defaults.yml
+++ b/sources/functional-administration/functional-administration-common/src/test/resources/functional_administration_test_config_invalid_defaults.yml
@@ -6,3 +6,5 @@ elasticsearchTenantIndexation:
   ontology:
     number_of_shards: 2
     number_of_replicas: 3
+
+accessionRegisterSymbolicThreadPoolSize: 4
