--- a/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-test-contract.conf
+++ b/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-test-contract.conf
@@ -14,3 +14,5 @@ elasticsearchTenantIndexation:
   default_config:
     number_of_shards: 1
     number_of_replicas: 2
+
+accessionRegisterSymbolicThreadPoolSize: 4
