--- a/sources/integration-test/src/test/resources/common/functional-administration.conf
+++ b/sources/integration-test/src/test/resources/common/functional-administration.conf
@@ -30,3 +30,5 @@ listEnableExternalIdentifiers:
        - INGEST_CONTRACT
        - PROFILE
        - ARCHIVE_UNIT_PROFILE
+
+accessionRegisterSymbolicThreadPoolSize: 4
