--- a/vitam-conf-dev/conf/functional-administration/functional-administration.conf
+++ b/vitam-conf-dev/conf/functional-administration/functional-administration.conf
@@ -56,3 +56,5 @@ listEnableExternalIdentifiers:
 listMinimumRuleDuration:
   2:
     AppraisalRule : 1 year
+
+accessionRegisterSymbolicThreadPoolSize: 4
