--- a/sources/functional-administration/functional-administration-common/src/test/resources/functional_administration_test_config.yml
+++ b/sources/functional-administration/functional-administration-common/src/test/resources/functional_administration_test_config.yml
@@ -50,3 +50,5 @@ listEnableExternalIdentifiers:
 listMinimumRuleDuration:
   2:
     AppraisalRule: 1 year
+
+accessionRegisterSymbolicThreadPoolSize: 4
