--- a/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-auth-test.conf
+++ b/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-auth-test.conf
@@ -22,3 +22,4 @@ elasticsearchTenantIndexation:
     number_of_replicas: 2
 
 accessionRegisterSymbolicThreadPoolSize: 4
+ruleAuditThreadPoolSize: 4
