--- a/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-test-contract.conf
+++ b/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-test-contract.conf
@@ -16,3 +16,4 @@ elasticsearchTenantIndexation:
     number_of_replicas: 2
 
 accessionRegisterSymbolicThreadPoolSize: 4
+ruleAuditThreadPoolSize: 4
