--- a/sources/integration-test/src/test/resources/common/functional-administration.conf
+++ b/sources/integration-test/src/test/resources/common/functional-administration.conf
@@ -32,3 +32,4 @@ listEnableExternalIdentifiers:
        - ARCHIVE_UNIT_PROFILE
 
 accessionRegisterSymbolicThreadPoolSize: 4
+ruleAuditThreadPoolSize: 4
