--- a/sources/functional-administration/functional-administration-rest/src/test/resources/functional-admin-reconstruction-test.conf
+++ b/sources/functional-administration/functional-administration-rest/src/test/resources/functional-admin-reconstruction-test.conf
@@ -33,3 +33,4 @@ elasticsearchTenantIndexation:
     number_of_replicas: 2
 
 accessionRegisterSymbolicThreadPoolSize: 4
+ruleAuditThreadPoolSize: 4
