--- a/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-test.conf
+++ b/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-test.conf
@@ -34,3 +34,4 @@ elasticsearchTenantIndexation:
     number_of_replicas: 2
 
 accessionRegisterSymbolicThreadPoolSize: 4
+ruleAuditThreadPoolSize: 4
