Item 7413 : Redure timer memory usage

--- a/deployment/ansible-vitam/roles/vitam/defaults/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/defaults/main.yml
@@ -3,6 +3,7 @@
 vitam_user: vitam
 vitam_group: vitam
 memory_opts: -Xms512m -Xmx512m
+timer_memory_opts: -Xms32m -Xmx128m
 gc_opts: "-Xlog:gc*,gc+age=trace,safepoint:file={{ vitam_folder_log }}/gc.log:utctime,pid,tags:filecount=32,filesize=64m"
 jmx_exporter_opts: ""
 java_opts: ""
