Item 6830 : Disable timers during service configuration & deployment

--- a/deployment/ansible-vitam/roles/start_vitam_timers/tasks/start_secundary.yml
+++ b/deployment/ansible-vitam/roles/start_vitam_timers/tasks/start_secundary.yml
@@ -3,6 +3,7 @@
 - name: Make sure timer is started on secundary site for all
   systemd:
     name: "{{ item[0] }}.timer"
+    enabled: "yes"
     state: "started"
   when: (inventory_hostname in groups[item[1]] ) and (item[3]|length > 0) and (item[3]=="in")
   loop: "{{ list_timers }}"
@@ -10,6 +11,7 @@
 - name: Make sure timer is started on secundary site for last
   systemd:
     name: "{{ item[0] }}.timer"
+    enabled: "yes"
     state: "started"
   when: (inventory_hostname == groups[item[1]]|last ) and (item[3]|length > 0) and (item[3]=="last")
   loop: "{{ list_timers }}"
