--- a/deployment/ansible-vitam/vitam.yml
+++ b/deployment/ansible-vitam/vitam.yml
@@ -3,17 +3,20 @@
 #
 #   0. Confirm playbook launch
 #   1. Network check
-#   2. Normalize
-#   3. Check ontology (when upgrade)
-#   4. Consul
-#   5. Prometheus node exporter
-#   6. Elasticsearch Log
-#   7. Log server
-#   8. Syslog
-#   9. Elasticsearch Data
-#  10. Kibana Data
-#  11. Mongo
-#  12. Vitam applications
+#   2. Stop Vitam timers
+#   3. Normalize
+#   4. Check ontology (when upgrade)
+#   5. Consul
+#   6. Prometheus node exporter
+#   7. Elasticsearch Log
+#   8. Log server
+#   9. Syslog
+#  10. Elasticsearch Data
+#  11. Kibana Data
+#  12. Mongo
+#  13. Vitam applications
+#  14. Start Vitam timers
+#  13. IHM Demo
 
 ### CONFIRM PLAYBOOK LAUNCH ###
 - hosts: all
@@ -34,6 +37,10 @@
   any_errors_fatal: true
   roles:
     - checks
+
+### STOP VITAM TIMERS ###
+- name: Stop Vitam timers
+  import_playbook: internal_stop_vitam_timers.yml
 
 ### HOSTS NORMALIZATION ###
 - hosts: vitam
@@ -323,6 +330,11 @@
     password_grantedstore: "{{ grantedstores.client_external }}"
     vitam_certificate_client_type: "external"
 
+### START VITAM TIMERS ###
+- name: Start Vitam timers
+  import_playbook: internal_start_vitam_timers.yml
+
+### IHM DEMO ###
 - hosts: hosts_ihm_demo
   gather_facts: no
   any_errors_fatal: true
