--- a/deployment/ansible-vitam/roles/start_vitam_timers/tasks/start_primary.yml
+++ b/deployment/ansible-vitam/roles/start_vitam_timers/tasks/start_primary.yml
@@ -2,6 +2,7 @@
 - name: Make sure timer is started on primary site for all
   systemd:
     name: "{{ item[0] }}.timer"
+    enabled: "yes"
     state: "started"
   when: (inventory_hostname in groups[item[1]] ) and (item[2]|length > 0) and (item[2]=="in")
   loop: "{{ list_timers }}"
@@ -9,6 +10,7 @@
 - name: Make sure timer is started on primary site for last
   systemd:
     name: "{{ item[0] }}.timer"
+    enabled: "yes"
     state: "started"
   when: (inventory_hostname == groups[item[1]]|last ) and (item[2]|length > 0) and (item[2]=="last")
   loop: "{{ list_timers }}"
