--- a/deb/vitam-product/vitam-elasticsearch-data/DEBIAN/control
+++ b/deb/vitam-product/vitam-elasticsearch-data/DEBIAN/control
@@ -1,8 +1,8 @@
 Package: vitam-elasticsearch-data
-Version: 7.6.2
+Version: 7.8.1
 Section: database
 Priority: optional
 Architecture: all
-Depends: bash, vitam-user-vitamdb, elasticsearch ( =7.6.2), openjdk-11-jre-headless, systemd, vitam-elasticsearch-analysis-icu ( =7.6.2)
+Depends: bash, vitam-user-vitamdb, elasticsearch (>= 7.8.1), openjdk-11-jre-headless, systemd, vitam-elasticsearch-analysis-icu ( =7.8.1)
 Maintainer: French Prime minister Office/SGMAP/DINSIC/Vitam Program <contact.vitam@culture.gouv.fr>
 Description: Elasticsearch is a distributed RESTful search engine built for the cloud. This package contains the service script and basic configuration for the archive data cluster for VITAM.
