--- a/deb/vitam-product/vitam-elasticsearch-log/DEBIAN/control
+++ b/deb/vitam-product/vitam-elasticsearch-log/DEBIAN/control
@@ -1,9 +1,9 @@
 Package: vitam-elasticsearch-log
-Version: 7.6.2
+Version: 7.8.1
 Section: database
 Priority: optional
 Architecture: all
-Depends: bash, vitam-user-vitamdb, elasticsearch ( =7.6.2), openjdk-11-jre-headless, systemd
+Depends: bash, vitam-user-vitamdb, elasticsearch (>= 7.8.1), openjdk-11-jre-headless, systemd
 Conflicts: elasticsearch ( <<5)
 Maintainer: French Prime minister Office/SGMAP/DINSIC/Vitam Program <contact.vitam@culture.gouv.fr>
 Description: Elasticsearch is a distributed RESTful search engine built for the cloud. This package contains the service script and basic configuration for the log cluster for VITAM.
