--- a/deb/vitam-product/vitam-logstash/DEBIAN/control
+++ b/deb/vitam-product/vitam-logstash/DEBIAN/control
@@ -1,8 +1,8 @@
 Package: vitam-logstash
-Version: 7.6.2
+Version: 7.8.1
 Section: database
 Priority: optional
 Architecture: all
-Depends: bash, vitam-user-vitam, logstash ( =1:7.6.2-1)
+Depends: bash, vitam-user-vitam, logstash (>= 7.8.1)
 Maintainer: French Prime minister Office/SGMAP/DINSIC/Vitam Program <contact.vitam@culture.gouv.fr>
 Description: An extensible logging pipeline.
