story #7423 Added block to force unix rights on elasticsearch.keystore

--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/tasks/main.yml
@@ -240,6 +240,13 @@
     mode: 0644
   notify: create systemd tmpfiles
 
+- name: force user on file elasticsearch-keystore
+  file:
+    path: "{{ elasticsearch_conf_dir }}/elasticsearch.keystore"
+    owner: "{{ vitam_defaults.users.vitamdb }}"
+    group: "{{ vitam_defaults.users.group }}"
+    mode: 0660
+
 # KWA Note : another file should be added here :
 # /usr/lib/sysctl.d/elasticsearch.conf
 # with content :
