story #7423 Added bypass on failure

--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/tasks/main.yml
@@ -239,6 +239,7 @@
     owner: "{{ vitam_defaults.users.vitamdb }}"
     group: "{{ vitam_defaults.users.group }}"
     mode: 0660
+  ignore_errors: yes
 
 #### Consul service declaration ####
 
