--- a/deployment/ansible-vitam-extra/roles/loadTNR/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/loadTNR/tasks/main.yml
@@ -24,7 +24,7 @@
   ignore_errors: true
   run_once: true
   register: login
-  #no_log: "{{ hide_passwords_during_deploy }}"
+  no_log: "{{ hide_passwords_during_deploy }}"
 
 - name: Purge database collections before launching TNR
   uri:
@@ -48,7 +48,7 @@
 
 - set_fact:
     TNR_TAGS: "{{lookup('file', '{{ inventory_dir }}/TNR_STRING.txt') }}"
-  when: stat_result.stat.exists 
+  when: stat_result.stat.exists
 
 - name: launch TNR
   shell: java -Dlogback.configurationFile="{{ TNR_conf }}/logback.xml" -DtnrBaseDirectory={{ TNR_dir }} -jar {{ TNR_lib }}/functional-test-*.jar -g fr.gouv.vitam.functionaltest.cucumber -p junit:{{ TNR_output }} -p fr.gouv.vitam.functionaltest.cucumber.report.VitamReporter:{{ report_dir }}/report_{{ ansible_date_time.year }}{{ ansible_date_time.month }}{{ ansible_date_time.day}}_{{ ansible_date_time.hour}}{{ ansible_date_time.minute}}{{ ansible_date_time.second}}.json {{ TNR_dir }}
