--- a/deployment/ansible-vitam-extra/roles/openldap_server/tasks/configure_ldap.yml
+++ b/deployment/ansible-vitam-extra/roles/openldap_server/tasks/configure_ldap.yml
@@ -1,22 +1,23 @@
 ---
 
 - name: Create the directory for the LDAP database
-  file: 
+  file:
     path: "/var/lib/ldap/{{ openldap_server_domain_name }}/"
-    state: directory 
+    state: directory
     owner: "{{ openldap_server_user }}"
     group: "{{ openldap_server_user }}"
 
 - name: Create the directory for the LDAP certificates
-  file: 
+  file:
     path: "{{ openldap_server_app_path }}/certs/"
-    state: directory 
+    state: directory
     owner: "{{ openldap_server_user }}"
     group: "{{ openldap_server_user }}"
 
 - name: Generate the private key for certificate request
   shell: openssl genrsa -des3 -passout pass:password -out my1.key 1024 chdir={{ openldap_server_app_path }}/certs/
          creates={{ openldap_server_app_path }}/certs/my1.key
+  no_log: "{{ hide_passwords_during_deploy }}"
 
 - name: Strip the passphrase from the key
   shell: openssl rsa -in my1.key -passin pass:password -out my.key chdir={{ openldap_server_app_path }}/certs/
@@ -27,8 +28,8 @@
   shell: openssl req -new -x509 -subj '/C={{ openldap_server_country }}/ST={{ openldap_server_state }}/L={{ openldap_server_location }}/O={{ openldap_server_organization }}/CN={{ ansible_hostname }}/' -days 3650 -key my.key -out cert.crt -extensions v3_ca chdir={{ openldap_server_app_path }}/certs/   creates={{ openldap_server_app_path }}/certs/cert.crt
 
 - name: Copy the supporting files
-  copy: 
-    src: ldap 
+  copy:
+    src: ldap
     dest: "/etc/sysconfig/ldap"
     mode: 0755
   when: openldap_server_enable_ssl and ansible_os_family == 'RedHat'
@@ -36,17 +37,17 @@
    - restart slapd
 
 - name: Copy the supporting files
-  copy: 
-    src: slapd 
-    dest: /etc/default/slapd 
+  copy:
+    src: slapd
+    dest: /etc/default/slapd
     mode: 0755
   when: openldap_server_enable_ssl and ansible_os_family == 'Debian'
   notify:
    - restart slapd
 
 - name: Start the slapd service
-  service: 
-    name: slapd 
+  service:
+    name: slapd
     state: started
     enabled: yes
 
