--- a/sources/common/common-public/src/test/resources/vitam.conf
+++ b/sources/common/common-public/src/test/resources/vitam.conf
@@ -1,6 +1,8 @@
 secret : vitamsecret
 filterActivation : true
 acceptableRequestTime : 25
+criticalRequestTime : 45
+requestTimeAlertThrottlingDelay : 120
 vitamCleanPeriod : 5
 defaultDigestType : SHA384
 environmentName : ENV
