Updated clamav configuration to centralize logs & display more useful informations.
Refactoring clamav role to properly manage restart when scan.conf file is modified.

Add logrotate configuration for clamav logs.

--- a/deployment/ansible-vitam/roles/antivirus/handlers/main.yml
+++ b/deployment/ansible-vitam/roles/antivirus/handlers/main.yml
@@ -2,10 +2,5 @@
 
 - name: restart clamav
   service:
-    name: "clamd@scan"
-    state: restarted
-
-- name: restart debian_clamav
-  systemd:
-    name: clamav-daemon
+    name: "{{ clamav_service_name }}"
     state: restarted
