--- a/deployment/ansible-vitam/roles/mongoc/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/mongoc/tasks/main.yml
@@ -64,6 +64,21 @@
   notify:
     - restart mongoc
 
+- name: Enable logrotate for vitam-mongoc
+  template:
+    src: logrotate.j2
+    dest: /etc/logrotate.d/vitam-mongoc
+    owner: root
+    group: root
+    mode: 0644
+  when: mongodb.logrotate == 'enabled'
+
+- name: Disable logrotate for vitam-mongoc
+  file:
+    path: /etc/logrotate.d/vitam-mongoc
+    state: absent
+  when: mongodb.logrotate == 'disabled'
+
 #### Consul configuration ####
 
 - name: Ensure consul config dir is OK
