--- a/deployment/ansible-vitam/roles/mongoc/vars/main.yml
+++ b/deployment/ansible-vitam/roles/mongoc/vars/main.yml
@@ -1,4 +1,5 @@
 ---
-mongo_tmp_path:  '{{ vitam_defaults.folder.root_path }}/tmp/mongoc'
-mongo_config_path:  '{{ vitam_defaults.folder.root_path }}/conf/mongoc'
-mongo_db_path:      '{{ vitam_defaults.folder.root_path }}/data/mongoc/db'
+mongo_tmp_path:    '{{ vitam_defaults.folder.root_path }}/tmp/mongoc'
+mongo_config_path: '{{ vitam_defaults.folder.root_path }}/conf/mongoc'
+mongo_db_path:     '{{ vitam_defaults.folder.root_path }}/data/mongoc/db'
+mongo_folder_log:  '{{ vitam_defaults.folder.root_path }}/log/mongoc'
