--- a/deployment/ansible-vitam/roles/mongod/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/mongod/tasks/main.yml
@@ -65,6 +65,21 @@
   tags:
     - update_mongodb_configuration
 
+- name: Enable logrotate for vitam-mongod
+  template:
+    src: logrotate.j2
+    dest: /etc/logrotate.d/vitam-mongod
+    owner: root
+    group: root
+    mode: 0644
+  when: mongodb.logrotate == 'enabled'
+
+- name: Disable logrotate for vitam-mongod
+  file:
+    path: /etc/logrotate.d/vitam-mongod
+    state: absent
+  when: mongodb.logrotate == 'disabled'
+
 #### Consul configuration ####
 
 - name: Ensure consul config dir is OK
