--- a/deployment/ansible-vitam/roles/mongod/vars/main.yml
+++ b/deployment/ansible-vitam/roles/mongod/vars/main.yml
@@ -1,4 +1,5 @@
 ---
-mongo_tmp_path:  '{{ vitam_defaults.folder.root_path }}/tmp/mongod'
-mongo_config_path:  '{{ vitam_defaults.folder.root_path }}/conf/mongod'
-mongo_db_path:      '{{ vitam_defaults.folder.root_path }}/data/mongod/db'
+mongo_tmp_path:    '{{ vitam_defaults.folder.root_path }}/tmp/mongod'
+mongo_config_path: '{{ vitam_defaults.folder.root_path }}/conf/mongod'
+mongo_db_path:     '{{ vitam_defaults.folder.root_path }}/data/mongod/db'
+mongo_folder_log:  '{{ vitam_defaults.folder.root_path }}/log/mongod'
