--- a/vitam-conf-dev/conf/processing/vitam.conf
+++ b/vitam-conf-dev/conf/processing/vitam.conf
@@ -9,3 +9,4 @@ tenants :  [ "0", "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
 adminTenant : 1
 ontologyCacheMaxEntries: 100
 ontologyCacheTimeoutInSeconds: 300
+processEngineWaitForStepTimeout: 172800
