--- a/sources/functional-administration/functional-administration-griffins/pom.xml
+++ b/sources/functional-administration/functional-administration-griffins/pom.xml
@@ -34,6 +34,13 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate-validator.version}</version>
+            <exclusions>
+                <!-- Conflicting with rest-easy jboss logging version -->
+                <exclusion>
+                    <groupId>org.jboss.logging</groupId>
+                    <artifactId>jboss-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
