--- a/deployment/environments/group_vars/all/tenants_vars.yml
+++ b/deployment/environments/group_vars/all/tenants_vars.yml
@@ -15,6 +15,8 @@ vitam_tenant_admin: 1
 # - 'number_of_replicas': number of additional copies of primary shards
 # The total number of shards : number_of_shards * (1 primary + M number_of_replicas)
 #
+# CAUTION : The total number of shards should be lower than or equal to the number of elasticsearch-data instances in the cluster
+#
 # Default settings should be okay for most use cases.
 # For more data-intensive workloads or deployments with high number of tenants, custom tenant and/or collection configuration might be specified.
 #
