Item 7538 : Fix OfferLogs

--- a/sources/integration-test/src/test/resources/common/storage-default-offer.conf
+++ b/sources/integration-test/src/test/resources/common/storage-default-offer.conf
@@ -6,6 +6,6 @@ mongoDbNodes:
     dbPort: 12346
 dbName: vitam-test
 offerLogCompaction:
-  expirationValue: 1
-  expirationUnit: MILLIS
+  expirationValue: 21
+  expirationUnit: DAYS
   compactionSize: 1000
