Item 7288  Ajout de politique de conservation de version dans  managementContract

--- a/sources/functional-administration/functional-administration-common/src/main/resources/managementcontract-es-mapping.json
+++ b/sources/functional-administration/functional-administration-common/src/main/resources/managementcontract-es-mapping.json
@@ -43,6 +43,31 @@
           }
         }
       },
+      "VersionRetentionPolicy": {
+        "type": "object",
+        "properties": {
+          "InitialVersion": {
+            "type": "boolean"
+          },
+          "IntermediaryVersion": {
+            "type": "keyword"
+          },
+          "Usages": {
+            "type": "object",
+            "properties": {
+              "UsageName": {
+                "type" : "keyword"
+              },
+              "InitialVersion": {
+                "type": "boolean"
+              },
+              "IntermediaryVersion": {
+                "type": "keyword"
+              }
+            }
+          }
+        }
+      },
       "_tenant": {
         "type": "long"
       },
